[FRAPI] initial port to 1.21.11